--- a/test3.html
+++ b/test3.html
@@ -145,7 +145,7 @@
     </div>
 
     <div class="form" id="form1">
-      <form onsubmit="nameDesertPlanet()">
+      <form onsubmit="nameDesertPlanet(); return false;">
         <label for="desertPlanetName">Your sensor have detected a possibly habitable planet. What do you want to name it?</label>
         <input type="text" autocomplete="off" id="desertPlanetName"><br><br>
         <button type="button" value="Submit" onclick="nameDesertPlanet(this)"> Save </button>
@@ -205,4 +205,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.10--Checking Planet Name w/ Forms--->
+<!--Version 0.12--Checking Planet Name w/ Forms--->
