--- a/test3.html
+++ b/test3.html
@@ -146,7 +146,7 @@
 
     <div class="form" id="form1">
       <form onsubmit="nameDesertPlanet(); return false;">
-        <label for="desertPlanetName">Your sensor have detected a possibly habitable planet. What do you want to name it?</label>
+        <label for="desertPlanetName">Your long-range sensors have detected a possibly habitable planet. What do you want to name it?</label>
         <input type="text" autocomplete="off" id="desertPlanetName"><br><br>
         <button type="button" value="Submit" onclick="nameDesertPlanet(this)"> Save </button>
       </form>
