--- a/events.html
+++ b/events.html
@@ -23,7 +23,7 @@
           "top     top    top"
           "name    name   name"
           "desc    desc   desc"
-          "margin1 button margin2"
+          "button button button"
           "bottom  bottom bottom";
         gap: 1.75px;
         background: #1d4b96;
@@ -40,7 +40,7 @@
       .top { grid-area:top; display:none; }
       .bottom { grid-area:bottom; display:none; }
       #event1 { height:300px; top:100px; left:900px; }
-      #button1 { border-radius:10%; background:#7096cf; font-family:'MedievalSharp', cursive; }
+      #button1 { border-radius:10%; background:#7096cf; font-family:'MedievalSharp', cursive; width:250px; }
     </style>
   </head>
   
@@ -61,4 +61,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.12--->
+<!--Version 0.13--->
