--- a/planets.html
+++ b/planets.html
@@ -6,7 +6,7 @@
     
       body { background:#030a17; }
       .planet { position:absolute; image-rendering:pixelated; width:50px; height:50px; background:gray; border-radius:50%; transition:0.5s; }
-      .star { position:absolute; image-rendering:pixeled; width:70px; height:70px; background:#cfc4c4; border-radius:50%; transition:0.5s; }
+      .star { position:absolute; image-rendering:pixelated; width:70px; height:70px; background:#cfc4c4; border-radius:50%; transition:0.5s; }
       
       #desert { top:135px; left:135px; }
       #savanna { top:135px; left:535px; }
