--- a/planets.html
+++ b/planets.html
@@ -74,7 +74,7 @@
     <img class="planet system1planet" id="tundra" src="tundraplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Tundra Planet Img---->
     <img class="planet system1planet" id="continental" src="continentalplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Continental Planet Img---->
     <img class="planet system1planet" id="ocean" src="oceanplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Ocean Planet Img---->
-    <img class="star" id="redStar" src="redstar1.png" onclick="zoomOut(this)">  </img> <!--Red Star Img---->
+    <img class="star zoomedOut" id="redStar" src="redstar1.png" onclick="zoomIn(this)">  </img> <!--Red Star Img---->
     
     <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyPlanet(this)"></img>
 
@@ -192,15 +192,31 @@
       function unSurvey(el) {
         el.style.display = "none";
       }
-      function zoomOut(el) {
-        var newHeight = 10;
-        var newWidth = 10;
+      function zoomIn(el) {
+        var newHeight = 15;
+        var newWidth = 15;
         el.style.height = newHeight + "px";
         el.style.width = newWidth + "px";
         var systemPlanets = document.querySelectorAll(".system1Planet");
         systemPlanets.forEach(planetEl => planetEl.style.display = "none");
+        el.classList.remove("zoomedOut");
+        el.classList.add("zoomedIn");
+        el.removeAttribute("onclick");
+        document.querySelectorAll(".zoomedIn").onclick = zoomOut(this);
+      }
+      function zoomOut(el) {
+        var newHeight = 70;
+        var newWidth = 70;
+        el.style.height = newHeight + "px";
+        el.style.width = newWidth + "px";
+        var systemPlanets = document.querySelectorAll(.system1Planet);
+        systemPlanets.forEach(planetEl => planetEl.style.display = "block");
+        el.classList.remove("zomedIn");
+        el.classList.add("zoomedOut");
+        el.removeAttribute("onclick");
+        document.querySelectorAll(".zoomedOut").onclick = zoomIn(this);
       }
     </script>
   </body>
 </html>
-<!--Version 0.105--->
+<!--Version 0.107--->
