--- a/planets.html
+++ b/planets.html
@@ -209,7 +209,7 @@
         var newWidth = 70;
         el.style.height = newHeight + "px";
         el.style.width = newWidth + "px";
-        var systemPlanets = document.querySelectorAll(.system1Planet);
+        var systemPlanets = document.querySelectorAll(".system1Planet");
         systemPlanets.forEach(planetEl => planetEl.style.display = "block");
         el.classList.remove("zomedIn");
         el.classList.add("zoomedOut");
@@ -219,4 +219,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.107--->
+<!--Version 0.108--->
