--- a/planets.html
+++ b/planets.html
@@ -193,30 +193,32 @@
         el.style.display = "none";
       }
       function zoomIn(el) {
+        var star = document.getElementById("redStar");
         var newHeight = 15;
         var newWidth = 15;
-        el.style.height = newHeight + "px";
-        el.style.width = newWidth + "px";
+        star.style.height = newHeight + "px";
+        star.style.width = newWidth + "px";
         var systemPlanets = document.querySelectorAll(".system1Planet");
         systemPlanets.forEach(planetEl => planetEl.style.display = "none");
-        el.classList.remove("zoomedOut");
-        el.classList.add("zoomedIn");
-        el.removeAttribute("onclick");
-        document.querySelectorAll(".zoomedIn").onclick = zoomOut(this);
+        star.classList.remove("zoomedOut");
+        star.classList.add("zoomedIn");
+        star.removeAttribute("onclick");
+        document.querySelectorAll(".zoomedIn").onclick = zoomOut(document.getElementById("redStar"));
       }
-      function zoomOut(el) {
+      function zoomOut(el) { 
+        var star = document.getElementById("redStar");
         var newHeight = 70;
         var newWidth = 70;
-        el.style.height = newHeight + "px";
-        el.style.width = newWidth + "px";
+        star.style.height = newHeight + "px";
+        star.style.width = newWidth + "px";
         var systemPlanets = document.querySelectorAll(".system1Planet");
         systemPlanets.forEach(planetEl => planetEl.style.display = "block");
-        el.classList.remove("zomedIn");
-        el.classList.add("zoomedOut");
-        el.removeAttribute("onclick");
-        document.querySelectorAll(".zoomedOut").onclick = zoomIn(this);
+        star.classList.remove("zoomedIn");
+        star.classList.add("zoomedOut");
+        star.removeAttribute("onclick");
+        document.querySelectorAll(".zoomedOut").onclick = zoomIn(document.getElementById("redStar"));
       }
     </script>
   </body>
 </html>
-<!--Version 0.108--->
+<!--Version 0.109--->
