--- a/test4.html
+++ b/test4.html
@@ -3,6 +3,7 @@
     <title> Test 4 </title>
     <style>
     
+      body { background:lightblue; }
     
     </style>
   </head>
@@ -33,3 +34,4 @@
     </script>
   </body>
 </html>
+<!--Test 4--Testing e.keyCodes->
