--- a/test4.html
+++ b/test4.html
@@ -18,16 +18,16 @@
     
     document.addEventListener("keydown", function (e) {
       if (e.keyCode == "a") {
-        variable = "Planet 1";
+        variable.innerText = "Planet 1";
       }
       else if (e.keyCode == "b") {
-        variable = "Planet 2";
+        variable.innerText = "Planet 2";
       }
       else if (e.keyCode == "c") {
-        variable = "Planet 3";
+        variable.innerText = "Planet 3";
       }
       else if (e.keyCode == "d") {
-        variable = "Planet 4";
+        variable.innerText = "Planet 4";
       }
     });
     
