--- a/test4.html
+++ b/test4.html
@@ -16,7 +16,7 @@
     
     var variable = null;
    
-    event = new KeyboardEvent("planetName", "key")
+    var active = event.getModifierState("a");
     
     </script>
   </body>
