--- a/test5.html
+++ b/test5.html
@@ -198,7 +198,7 @@
         if (newPlanet.id = "mineralPlanet1") {
           document.getElementById("mineralPlanet1").src = "mineralplanet1.png";
         }
-        else () {
+        else {
           console.log("#2 selected");
         }
       }
