--- a/test5.html
+++ b/test5.html
@@ -195,7 +195,7 @@
         var randomIndex = Math.floor(Math.random() * allIds.length);
         var idToCopy = allIds[randomIndex];
         var newPlanet = document.getElementById(idToCopy);
-        if (newPlanet.id = "mineralPlanet1") {
+        if (newPlanet.id == "mineralPlanet1") {
           document.getElementById("mineralPlanet1").src = "mineralplanet1.png";
         }
         else {
