--- a/test5.html
+++ b/test5.html
@@ -75,7 +75,7 @@
     <img class="planet" id="tundra" src="tundraplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Tundra Planet Img---->
     <img class="planet" id="continental" src="continentalplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Continental Planet Img---->
     <img class="planet" id="ocean" src="oceanplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Ocean Planet Img---->
-    <img class="mineralPlanet" id="mineralPlanet1" src="mineralplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Mineral Planet Img---->
+    <img class="mineralPlanet" id="mineralPlanet1">  </img> <!--Mineral Planet Img------src="mineralplanet1.png"-->
     
     <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyPlanet(this)"></img>
 
