--- a/test5.html
+++ b/test5.html
@@ -15,7 +15,7 @@
       #continental { top:50px; left:500px; }
       #ocean { top:50px; left:600px; }
       #mineralPlanet1 { top:200px; left:100px; }
-      #mineralPlanet2 { top:200px; left:200px; }
+      /*#mineralPlanet2 { top:200px; left:200px; }*/
       
       .info-box { 
         position:absolute;
@@ -78,7 +78,7 @@
     <img class="planet" id="ocean" src="oceanplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Ocean Planet Img---->
 
     <img class="mineralPlanet" id="mineralPlanet1">  </img> <!--Mineral Planet #1 Img---->
-    <img class="mineralPlanet" id="mineralPlanet2">  </img> <!--Mineral Planet #2 Img---->
+    <!----<img class="mineralPlanet" id="mineralPlanet2">  </img> <!--Mineral Planet #2 Img---->
     
     <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyPlanet(this)"></img>
 
@@ -205,7 +205,7 @@
           console.log("#1 selected");
         }
         else if (newPlanet.id == "mineralPlanet2") {
-          document.getElementById("mineralPlanet2").src = "mineralplanet2.png";
+          document.getElementById("mineralPlanet1").src = "mineralplanet2.png";
           console.log("#2 selected");
         }
       }
