--- a/test5.html
+++ b/test5.html
@@ -15,7 +15,7 @@
       #continental { top:50px; left:500px; }
       #ocean { top:50px; left:600px; }
       #mineralPlanet1 { top:200px; left:100px; }
-      /*#mineralPlanet2 { top:200px; left:200px; }*/
+      #mineralPlanet2 { top:200px; left:200px; }
       
       .info-box { 
         position:absolute;
