--- a/test5.html
+++ b/test5.html
@@ -212,6 +212,7 @@
        
       
     </script>
+    <script declare()></script>
   </body>
 </html>
 <!--Test 5--Creating Planet Randomizers--->
