--- a/events.html
+++ b/events.html
@@ -79,7 +79,7 @@
       <div class="cell button"><button id="button" onclick="closeEvent1()"> Unfortunate. </button></div>
       <div class="cell bottom"></div>
     </div>
-    <div class="eventA" id="event2">
+    <div class="eventB" id="event2">
       <div class="cell top"></div>
       <div class="cell name"><p> Gold and Greed </p></div>
       <div class="cell desc"><p> A large unarmed cruiser has stopped at the colony on [planetName]. </p><p> They appear to be trading in rich minerals and will sell 200 of our units of measurements' worth in exchange for 150 credits. </p></div>
