--- a/events.html
+++ b/events.html
@@ -64,8 +64,8 @@
       .button2 { grid-area:button2 }
       .top { grid-area:top; display:none; }
       .bottom { grid-area:bottom; display:none; }
-      #event1 { height:300px; top:200px; left:500px; }
-      #event2 { height:300px; top:200px; left:570px; }
+      #event1 { height:300px; top:200px; left:500px; display:block; }
+      #event2 { height:300px; top:200px; left:570px; display:none; }
       #button { border-radius:10%; background:#7096cf; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
     </style>
   </head>
@@ -104,4 +104,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.16--->
+<!--Version 0.18--->
