--- a/events.html
+++ b/events.html
@@ -66,7 +66,7 @@
       .bottom { grid-area:bottom; display:none; }
       #event1 { height:300px; top:200px; left:500px; display:inline-grid; }
       #event2 { height:350px; top:200px; left:570px; display:none; }
-      #button { border-radius:10%; background:#7096cf; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
+      #button { border-radius:10%; background:blue; color:white; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
     </style>
   </head>
   
@@ -104,4 +104,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.20--->
+<!--Version 0.21--->
