--- a/planets.html
+++ b/planets.html
@@ -84,8 +84,8 @@
     <img class="mineralPlanet system2planet" id="mineralPlanet2" src="mineralplanet2.png" onmouseenter="mineralScan(this)" onmouseout="mineralUnScan(this)">  </img> <!--Mineral Planet #2---->
     <img class="mineralPlanet system2planet" id="mineralPlanet3" src="mineralplanet3.png" onmouseenter="mineralScan(this)" onmouseout="mineralUnScan(this)">  </img> <!--Mineral Planet #3---->
 
-    <img class="star zoomedOut" id="redStar" src="redstar1.png" onclick="zoomInRed(this)">  </img> <!--Red Star Img---->
-    <img class="star zoomedOut" id="blueStar" src="bluestar1.png" onclick="zoomInBlue(this)">  </img> <!--Blue Star Img---->
+    <img class="star zoomedOutRed" id="redStar" src="redstar1.png" onclick="zoomInRed(this)">  </img> <!--Red Star Img---->
+    <img class="star zoomedOutBlue" id="blueStar" src="bluestar1.png" onclick="zoomInBlue(this)">  </img> <!--Blue Star Img---->
     
     <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyPlanet(this)"></img>
 
@@ -229,10 +229,10 @@
         star.style.width = newWidth + "px";
         var systemPlanets = document.querySelectorAll(".system1Planet");
         systemPlanets.forEach(planetEl => planetEl.style.display = "none");
-        star.classList.remove("zoomedOut");
-        star.classList.add("zoomedIn");
+        star.classList.remove("zoomedOutRed");
+        star.classList.add("zoomedInRed");
         star.removeAttribute("onclick");
-        document.querySelector(".zoomedIn").onclick = zoomOutRed;
+        document.querySelector(".zoomedInRed").onclick = zoomOutRed;
       }
       function zoomOutRed() { 
         var star = document.getElementById("redStar");
@@ -242,10 +242,10 @@
         star.style.width = newWidth + "px";
         var systemPlanets = document.querySelectorAll(".system1Planet");
         systemPlanets.forEach(planetEl => planetEl.style.display = "block");
-        star.classList.remove("zoomedIn");
-        star.classList.add("zoomedOut");
+        star.classList.remove("zoomedInRed");
+        star.classList.add("zoomedOutRed");
         star.removeAttribute("onclick");
-        document.querySelector(".zoomedOut").onclick = zoomInRed;
+        document.querySelector(".zoomedOutRed").onclick = zoomInRed;
       }
       function zoomInBlue() {
         var star = document.getElementById("blueStar");
@@ -255,10 +255,10 @@
         star.style.width = newWidth + "px";
         var systemPlanets = document.querySelectorAll(".system2Planet");
         systemPlanets.forEach(planetEl => planetEl.style.display = "none");
-        star.classList.remove("zoomedOut");
-        star.classList.add("zoomedIn");
+        star.classList.remove("zoomedOutBlue");
+        star.classList.add("zoomedInBlue");
         star.removeAttribute("onclick");
-        document.querySelector(".zoomedIn").onclick = zoomOutBlue;
+        document.querySelector(".zoomedInBlue").onclick = zoomOutBlue;
       }
       function zoomOutBlue() { 
         var star = document.getElementById("blueStar");
@@ -268,12 +268,12 @@
         star.style.width = newWidth + "px";
         var systemPlanets = document.querySelectorAll(".system2Planet");
         systemPlanets.forEach(planetEl => planetEl.style.display = "block");
-        star.classList.remove("zoomedIn");
-        star.classList.add("zoomedOut");
+        star.classList.remove("zoomedInBlue");
+        star.classList.add("zoomedOutBlue");
         star.removeAttribute("onclick");
-        document.querySelector(".zoomedOut").onclick = zoomInBlue;
+        document.querySelector(".zoomedOutBlue").onclick = zoomInBlue;
       }
     </script>
   </body>
 </html>
-<!--Version 0.112--->
+<!--Version 0.114--->
