--- a/planets.html
+++ b/planets.html
@@ -9,17 +9,17 @@
       .mineralPlanet { position:absolute; image-rendering:pixelated; width:50px; height:50px; background:gray; border-radius:50%; transition:0.5s; }
       .star { position:absolute; image-rendering:pixelated; width:70px; height:70px; background:#cfc4c4; border-radius:50%; transition:0.5s; }
       
-      #desert { top:135px; left:185px; }
-      #savanna { top:135px; left:515px; }
-      #arctic { top:305px; left:75px }
-      #tundra { top:365px; left:495px; }
-      #continental { top:435px; left:135px; }
-      #ocean { top:525px; left:535px; }
+      #desert { top:135px; left:185px; display:none; }
+      #savanna { top:135px; left:515px; display:none; }
+      #arctic { top:305px; left:75px; display:none; }
+      #tundra { top:365px; left:495px; display:none; }
+      #continental { top:435px; left:135px; display:none; }
+      #ocean { top:525px; left:535px; display:none; }
+      #mineralPlanet1 { top:300px; left:530px; display:none; }
+      #mineralPlanet2 { top:125px; left:600px; display:none; }
+      #mineralPlanet3 { top:615px; left:800px; display:none; }
       #redStar { top:300px; left:320px; width:15px; height:15px; }
       #blueStar { top:300px; left:700px; width:15px; height:15px; }
-      #mineralPlanet1 { top:300px; left:530px; }
-      #mineralPlanet2 { top:125px; left:600px; }
-      #mineralPlanet3 { top:615px; left:800px; }
       
       .info-box { 
         position:absolute;
@@ -276,4 +276,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.115--->
+<!--Version 0.116--->
