--- a/planets.html
+++ b/planets.html
@@ -236,7 +236,7 @@
         mineralIcon.style.height = newHeight + "px";
         mineralIcon.style.width = newWidth + "px";
         var currentMineralScan = el.id + "Scan";
-        newMineralScan = document.getElementById(currentSurvey);
+        newMineralScan = document.getElementById(currentMineralScan);
       }
       function mineralUnScan(el) {
         el.style.backgroundColor = "gray";
@@ -324,4 +324,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.117--->
+<!--Version 0.118--->
