--- a/planets.html
+++ b/planets.html
@@ -182,9 +182,9 @@
       <div class="cell bottom"></div>
     </div>
 
-    <div class="mineralScan" id="mineralPlanet1Scan" onclick="unscanMineralPlanet"><div class="top"></div><div class="desc"><span> This planet contains 40 units of minerals. </span></div><div class="bottom"></div></div>
-    <div class="mineralScan" id="mineralPlanet2Scan" onclick="unscanMineralPlanet"><div class="top"></div><div class="desc"><span> This planet contains 62 units of minerals. </span></div><div class="bottom"></div></div>
-    <div class="mineralScan" id="mineralPlanet3Scan" onclick="unscanMineralPlanet"><div class="top"></div><div class="desc"><span> This planet contains 13 units of minerals. </span></div><div class="bottom"></div></div>
+    <div class="mineralScan" id="mineralPlanet1Scan" onclick="unscanMineralPlanet"><div class="top"></div><div class="cell desc"><span> This planet contains 40 units of minerals. </span></div><div class="bottom"></div></div>
+    <div class="mineralScan" id="mineralPlanet2Scan" onclick="unscanMineralPlanet"><div class="top"></div><div class="cell desc"><span> This planet contains 62 units of minerals. </span></div><div class="bottom"></div></div>
+    <div class="mineralScan" id="mineralPlanet3Scan" onclick="unscanMineralPlanet"><div class="top"></div><div class="cell desc"><span> This planet contains 13 units of minerals. </span></div><div class="bottom"></div></div>
 
     <script>
       /*Global Values*/
@@ -324,4 +324,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.118--->
+<!--Version 0.120--->
