--- a/planets.html
+++ b/planets.html
@@ -238,7 +238,7 @@
         el.style.padding = "1.5px";
         var caption = el.id + "Caption";
         var planetCaption = caption.id;
-        caption.style.display = "block";
+        planetCaption.style.display = "block";
         var newTop = el.offsetTop + 85;
         var newLeft = el.offsetLeft + 5;
         mineralIcon.style.top = newTop + "px";
@@ -254,7 +254,7 @@
         el.style.backgroundColor = "gray";
         var caption = el.id + "Caption";
         var planetCaption = caption.id;
-        caption.style.display = "none";
+        planetCaption.style.display = "none";
         el.style.padding = "0px";
         setTimeout(function(){
           hideMineralIcon()
@@ -339,4 +339,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.126--->
+<!--Version 0.127--->
