--- a/planets.html
+++ b/planets.html
@@ -21,7 +21,7 @@
       #redStar { top:300px; left:320px; width:15px; height:15px; }
       #blueStar { top:300px; left:900px; width:15px; height:15px; }
       
-      .mineralPlanetCaption span { color:white; }
+      .mineralPlanetCaption span { color:white; font-size:70%; }
       #mineralPlanet1Caption { width:90px; position:absolute; top:355px; left:730px; display:none; }
       #mineralPlanet2Caption { width:90px; position:absolute; top:180px; left:800px; display:none; }
       #mineralPlanet3Caption { width:90px; position:absolute; top:670px; left:1000px; display:none; }
@@ -341,4 +341,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.131--->
+<!--Version 0.132--->
