--- a/planets.html
+++ b/planets.html
@@ -50,7 +50,7 @@
         background: #1d4b96;
         transition:0.4s;
       }
-      .mineralScan { 
+      .mineralSurvey { 
         position:absolute;
         width: 120px;
         height: 60px;
@@ -93,9 +93,9 @@
       #tundraSurvey { top:80px; left:1040px; height:300px; }
       #continentalSurvey { top:80px; left:1020px; height:300px; }
       #oceanSurvey { top:80px; left:1000px; height:300px; }
-      #mineralPlanet1Scan { top:700px; left:1090px; }
-      #mineralPlanet2Scan { top:700px; left:1050px; }
-      #mineralPlanet3Scan { top:700px; left:1010px; }
+      #mineralPlanet1Survey { top:700px; left:1090px; }
+      #mineralPlanet2Survey { top:700px; left:1050px; }
+      #mineralPlanet3Survey { top:700px; left:1010px; }
       .surveyIcon { position:absolute; transition:1s }
       #surveyIcon { width:0px; height:0px; }
       .mineralIcon { position:absolute; transition:1s }
@@ -112,15 +112,15 @@
     <img class="planet system1planet" id="continental" src="continentalplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Continental Planet Img---->
     <img class="planet system1planet" id="ocean" src="oceanplanet1.png" onmouseenter="select(this)" onmouseout="deselect(this)">  </img> <!--Ocean Planet Img---->
 
-    <img class="mineralPlanet system2planet" id="mineralPlanet1" src="mineralplanet1.png" onmouseenter="mineralScan(this)" onmouseout="mineralUnScan(this)">  </img> <!--Mineral Planet #1---->
-    <img class="mineralPlanet system2planet" id="mineralPlanet2" src="mineralplanet2.png" onmouseenter="mineralScan(this)" onmouseout="mineralUnScan(this)">  </img> <!--Mineral Planet #2---->
-    <img class="mineralPlanet system2planet" id="mineralPlanet3" src="mineralplanet3.png" onmouseenter="mineralScan(this)" onmouseout="mineralUnScan(this)">  </img> <!--Mineral Planet #3---->
+    <img class="mineralPlanet system2planet" id="mineralPlanet1" src="mineralplanet1.png" onmouseenter="mineralSelect(this)" onmouseout="mineralUnSelect(this)">  </img> <!--Mineral Planet #1---->
+    <img class="mineralPlanet system2planet" id="mineralPlanet2" src="mineralplanet2.png" onmouseenter="mineralSelect(this)" onmouseout="mineralUnSelect(this)">  </img> <!--Mineral Planet #2---->
+    <img class="mineralPlanet system2planet" id="mineralPlanet3" src="mineralplanet3.png" onmouseenter="mineralSelect(this)" onmouseout="mineralUnSelect(this)">  </img> <!--Mineral Planet #3---->
 
     <img class="star zoomedInRed" id="redStar" src="redstar1.png" onclick="zoomOutRed(this)">  </img> <!--Red Star Img---->
     <img class="star zoomedInBlue" id="blueStar" src="bluestar1.png" onclick="zoomOutBlue(this)">  </img> <!--Blue Star Img---->
     
     <img class="surveyIcon" id="surveyIcon" src="surveyicon.png" onclick="surveyPlanet(this)"></img>
-    <img class="mineralIcon" id="mineralIcon" src="gemstoneicon.png" onclick="scanMineralPlanet(this)"></img>
+    <img class="mineralIcon" id="mineralIcon" src="gemstoneicon.png" onclick="surveyMineralPlanet(this)"></img>
 
     <div class="info-box" id="desertSurvey" onclick="unSurvey(this)">
       <div class="cell top"></div>
@@ -188,9 +188,9 @@
       <div class="cell bottom"></div>
     </div>
 
-    <div class="mineralScan" id="mineralPlanet1Scan" onclick="unscanMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet contains 40 units of minerals. </span></div><div class="bottom"></div></div>
-    <div class="mineralScan" id="mineralPlanet2Scan" onclick="unscanMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet contains 62 units of minerals. </span></div><div class="bottom"></div></div>
-    <div class="mineralScan" id="mineralPlanet3Scan" onclick="unscanMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet contains 13 units of minerals. </span></div><div class="bottom"></div></div>
+    <div class="mineralSurvey" id="mineralPlanet1Survey" onclick="unsurveyMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet contains 40 units of minerals. </span></div><div class="bottom"></div></div>
+    <div class="mineralSurvey" id="mineralPlanet2Survey" onclick="unsurveyMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet contains 62 units of minerals. </span></div><div class="bottom"></div></div>
+    <div class="mineralSurvey" id="mineralPlanet3Survey" onclick="unsurveyMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet contains 13 units of minerals. </span></div><div class="bottom"></div></div>
 
     <div class="mineralPlanetCaption" id="mineralPlanet1Caption"><span> Coria Alpha </span></div>
     <div class="mineralPlanetCaption" id="mineralPlanet2Caption"><span> Coria Beta </span></div>
@@ -208,7 +208,7 @@
       var continentalSurvey = document.getElementById("continentalSurvey");
       var oceanSurvey = document.getElementById("oceanSurvey");
       var newSurvey = null;
-      var newMineralScan = null;
+      var newMineralSurvey = null;
       
       var desertPlanetName = "Calsron"; /*Desert Planet Name*/
       const desertPlanet = document.getElementById("desertPlanet");
@@ -235,7 +235,7 @@
           hideIcon()
         },1100);        
       }
-      function mineralScan(el) {
+      function mineralSelect(el) {
         el.style.backgroundColor = "lime";
         el.style.padding = "1.5px";
         var caption = el.id + "Caption";
@@ -249,10 +249,10 @@
         var newWidth = 20;
         mineralIcon.style.height = newHeight + "px";
         mineralIcon.style.width = newWidth + "px";
-        var currentMineralScan = el.id + "Scan";
-        newMineralScan = document.getElementById(currentMineralScan);
+        var currentMineralSurvey = el.id + "Survey";
+        newMineralSurvey = document.getElementById(currentMineralSurvey);
       }
-      function mineralUnScan(el) {
+      function mineralUnSelect(el) {
         el.style.backgroundColor = "gray";
         el.style.padding = "0px";
         setTimeout(function(){
@@ -270,9 +270,7 @@
         var newWidth = 0;
         mineralIcon.style.height = newHeight + "px";
         mineralIcon.style.width = newWidth + "px";
-        var caption = el.id + "Caption";
-        var planetCaption = document.getElementById(caption);
-        planetCaption.style.display = "none";
+        currentMineralSurvey.style.display = "none";
       }
       function surveyPlanet() {
         newSurvey.style.display = "inline-grid";
@@ -280,10 +278,10 @@
       function unSurvey(el) {
         el.style.display = "none";
       }
-      function scanMineralPlanet() {
-        newMineralScan.style.display = "inline-grid";
+      function surveyMineralPlanet() {
+        newMineralSurvey.style.display = "inline-grid";
       }
-      function unscanMineralPlanet(el) {
+      function unsurveyMineralPlanet(el) {
         el.style.display = "none";
       }
       function zoomInRed() {
@@ -341,4 +339,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.134--->
+<!--Version 0.135--->
