--- a/planets.html
+++ b/planets.html
@@ -270,7 +270,7 @@
         var newWidth = 0;
         mineralIcon.style.height = newHeight + "px";
         mineralIcon.style.width = newWidth + "px";
-        currentMineralSurvey.style.display = "none";
+        newMineralSurvey.style.display = "none";
       }
       function surveyPlanet() {
         newSurvey.style.display = "inline-grid";
@@ -339,4 +339,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.135--->
+<!--Version 0.136--->
