--- a/hud.html
+++ b/hud.html
@@ -7,7 +7,7 @@
   
   </head>
   <body>
-    <div class="HUD"></div>
+    <div class="HUD"><span> ... </span></div>
   </body>
 </html>
 <!--Version 0.1--->
