--- a/hud.html
+++ b/hud.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-  
+    <title>HUD Test</title>
     <style>
-      .HUD { position:absolute; top:0px; left:0px; height:50px; width:1100px;}
+      .HUD { position:absolute; top:0px; left:0px; height:50px; width:1100px; background:#7096cf; }
     </style>
   
   </head>
