--- a/hud.html
+++ b/hud.html
@@ -2,7 +2,8 @@
   <head>
     <title>HUD Test</title>
     <style>
-      .HUD { position:absolute; top:0px; left:0px; height:50px; width:100%; background:#7096cf; border:2px solid lightgray; 
+      .HUD { position:absolute; top:0px; left:0px; height:50px; width:100%; background:#7096cf; border:2px solid lightgray;
+        display:inline-grid;
         grid-template-columns: repeat(10, 1fr);
         grid-auto-rows:10px 30px 10px;
         grid-template-areas:
@@ -48,4 +49,4 @@
     </div>
   </body>
 </html>
-<!--Version 0.7--->
+<!--Version 0.8--->
