--- a/hud.html
+++ b/hud.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <title>HUD Test</title>
     <style>
       .HUD { position:absolute; top:0px; left:0px; height:50px; width:100%; background:#7096cf; border:2px solid lightgray;
@@ -15,8 +16,8 @@
       }
       .top { grid-area:top; background:#1d4b96; }
       .bottom { grid-area:bottom; background:#1d4b96; }
-      .cell { position:relative; padding:3px; overflow:hidden; }
-      .cell p { overflow:hidden; font-size:80%; }
+      .cell { position:relative; padding:3px; overflow:hidden; font-family: 'MedievalSharp', cursive; }
+      .cell p { overflow:hidden; font-size:80%; font-family: 'MedievalSharp', cursive; }
       .cell span { overflow:hidden; font-size:80%; }
       .margin1 { grid-area:margin1; }
       .margin2 { grid-area:margin2; }
@@ -49,4 +50,4 @@
     </div>
   </body>
 </html>
-<!--Version 0.8--->
+<!--Version 0.9--->
