--- a/hud.html
+++ b/hud.html
@@ -29,6 +29,9 @@
       .mineralNumber { grid-area:mineralNumber; }
       .creditNumber { grid-area:creditNumber; }
       .authorityNumber { grid-area:authorityNumber; }
+      #HUDMineralIcon { image-rendering:pixelated; position:relative; height:25px; width:25px;}
+      #HUDCreditIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
+      #HUDAuthorityIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       
     </style>
   
@@ -50,4 +53,4 @@
     </div>
   </body>
 </html>
-<!--Version 0.9--->
+<!--Version 0.10--->
