--- a/hud.html
+++ b/hud.html
@@ -5,7 +5,7 @@
     <style>
       .HUD { position:absolute; top:0px; left:0px; height:50px; width:100%; background:#7096cf; border:2px solid lightgray;
         display:inline-grid;
-        grid-template-columns: repeat(10, 1fr);
+        grid-template-columns: 10px 25px 25px 20px 25px 25px 20px 25px 25px auto;
         grid-auto-rows:10px 30px 10px;
         grid-template-areas:
           "top     top         top           top     top        top          top     top           top             top   "
@@ -53,4 +53,4 @@
     </div>
   </body>
 </html>
-<!--Version 0.10--->
+<!--Version 0.11--->
