--- a/hud.html
+++ b/hud.html
@@ -64,10 +64,10 @@
       
       function indebt() {
         var newCreditNumber = "-20(+0)";
-        HUDCreditNumber.innerText = document.getElementById(newCreditNumber);
+        HUDCreditNumber.innerText = newCreditNumber;
       }
       
     </script>
   </body>
 </html>
-<!--Version 0.15--->
+<!--Version 0.16--->
