--- a/hud.html
+++ b/hud.html
@@ -3,6 +3,7 @@
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <title>HUD Test</title>
     <style>
+      body { background:#030a17; }
       .HUD { position:absolute; top:0px; left:0px; height:50px; width:100%; background:#7096cf; border:2px solid lightgray;
         display:inline-grid;
         grid-template-columns: 20px 50px 70px 40px 50px 70px 40px 50px 70px auto;
