--- a/hud.html
+++ b/hud.html
@@ -34,7 +34,7 @@
       #HUDCreditIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       #HUDAuthorityIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       
-      #button1 { position:absolute; top:300px; left:100px; }
+      #button1 { position:absolute; top:300px; left:100px; background:yellow; border: 5px solid gray; }
       
     </style>
   
@@ -71,4 +71,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.16--->
+<!--Version 0.17--->
