--- a/hud.html
+++ b/hud.html
@@ -65,10 +65,12 @@
       
       function indebt() {
         var newCreditNumber = "-20(+0)";
+        var newAuthorityNumber = "10(+0)"
         HUDCreditNumber.innerText = newCreditNumber;
+        HUDAuthorityNumber.innerText = newAuthorityNumber;
       }
       
     </script>
   </body>
 </html>
-<!--Version 0.17--->
+<!--Version 0.18--->
