--- a/hud.html
+++ b/hud.html
@@ -64,7 +64,7 @@
       var HUDAuthorityNumber = document.getElementById("HUDAuthorityNumber");
       
       function indebt() {
-        var newCreditNumber = "-20(+0)";
+        var newCreditNumber = HUDCreditNumber - 20;
         var newAuthorityNumber = "10(+0)"
         HUDCreditNumber.innerText = newCreditNumber;
         HUDAuthorityNumber.innerText = newAuthorityNumber;
