--- a/hud.html
+++ b/hud.html
@@ -44,10 +44,10 @@
       <div class="cell top"></div>
       <div class="cell margin1"></div>
       <div class="cell mineralIcon"><img id="HUDMineralIcon" src="gemstoneicon.png"></img></div>
-      <div class="cell mineralNumber"><span id="HUDMineralNumber"> 50(+0) </span></div>
+      <div class="cell mineralNumber"><span id="HUDMineralNumber"> 50 </span></div>
       <div class="cell margin2"></div>
       <div class="cell creditIcon"><img id="HUDCreditIcon" src="crediticon.png"></img></div>
-      <div class="cell creditNumber"><span id="HUDCreditNumber"> 50(+0) </span></div>
+      <div class="cell creditNumber"><span id="HUDCreditNumber"> 50 </span></div>
       <div class="cell margin3"></div>
       <div class="cell authorityIcon"><img id="HUDAuthorityIcon" src="authorityicon.png"></img></div>
       <div class="cell authorityNumber"><span id="HUDAuthorityNumber"> 50 </span></div>
@@ -65,7 +65,7 @@
       
       function indebt() {
         var newCreditNumber = -20;
-        var newAuthorityNumber = "10(+0)"
+        var newAuthorityNumber = 30;
         HUDCreditNumber.innerText = newCreditNumber;
         HUDAuthorityNumber.innerText = newAuthorityNumber;
       }
