--- a/hud.html
+++ b/hud.html
@@ -77,7 +77,7 @@
         var newCreditNumber = HUDCreditNumber.innerText - 20;
         HUDCreditNumber.innerText = newCreditNumber;
       }
-      function indebtMinerals() {
+      function indebtAuthority() {
         var newAuthorityNumber = HUDAuthorityNumber.innerText - 20;
         HUDAuthorityNumber.innerText = newAuthorityNumber;
       }
