--- a/hud.html
+++ b/hud.html
@@ -26,9 +26,9 @@
       .margin4 { grid-area:margin4; }
       .mineralIcon { grid-area:mineralIcon; }
       .creditIcon { grid-area:creditIcon; }
-      .authorityIcon { grid-area:authorityIcon; }
-      .mineralNumber { grid-area:mineralNumber; }
-      .creditNumber { grid-area:creditNumber; }
+      .authorityIcon { grid-area:authorityIcon; padding:7px; }
+      .mineralNumber { grid-area:mineralNumber; padding:7px; }
+      .creditNumber { grid-area:creditNumber; padding:7px; }
       .authorityNumber { grid-area:authorityNumber; }
       #HUDMineralIcon { image-rendering:pixelated; position:relative; height:25px; width:25px;}
       #HUDCreditIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
@@ -84,4 +84,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.19--->
+<!--Version 0.20--->
