--- a/hud.html
+++ b/hud.html
@@ -26,10 +26,10 @@
       .margin4 { grid-area:margin4; }
       .mineralIcon { grid-area:mineralIcon; }
       .creditIcon { grid-area:creditIcon; }
-      .authorityIcon { grid-area:authorityIcon; padding:7px; }
+      .authorityIcon { grid-area:authorityIcon; }
       .mineralNumber { grid-area:mineralNumber; padding:7px; }
       .creditNumber { grid-area:creditNumber; padding:7px; }
-      .authorityNumber { grid-area:authorityNumber; }
+      .authorityNumber { grid-area:authorityNumber; padding:7px; }
       #HUDMineralIcon { image-rendering:pixelated; position:relative; height:25px; width:25px;}
       #HUDCreditIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       #HUDAuthorityIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
@@ -84,4 +84,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.20--->
+<!--Version 0.21--->
