--- a/planets.html
+++ b/planets.html
@@ -189,9 +189,9 @@
       <div class="cell bottom"></div>
     </div>
 
-    <div class="mineralSurvey" id="mineralPlanet1Survey" onclick="unsurveyMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet contains 40 units of minerals. </span></div><div class="bottom"></div></div>
-    <div class="mineralSurvey" id="mineralPlanet2Survey" onclick="unsurveyMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet contains 62 units of minerals. </span></div><div class="bottom"></div></div>
-    <div class="mineralSurvey" id="mineralPlanet3Survey" onclick="unsurveyMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet contains 13 units of minerals. </span></div><div class="bottom"></div></div>
+    <div class="mineralSurvey" id="mineralPlanet1Survey" onclick="unsurveyMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet is littered with sizable mineral deposits. </span></div><div class="bottom"></div></div>
+    <div class="mineralSurvey" id="mineralPlanet2Survey" onclick="unsurveyMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet's brutal conditions have led it to form mineral caches. </span></div><div class="bottom"></div></div>
+    <div class="mineralSurvey" id="mineralPlanet3Survey" onclick="unsurveyMineralPlanet(this)"><div class="top"></div><div class="cell desc"><span> This planet's rings contain significant amounts of minerals. </span></div><div class="bottom"></div></div>
 
     <div class="mineralPlanetCaption" id="mineralPlanet1Caption"><span> Coria Alpha </span></div>
     <div class="mineralPlanetCaption" id="mineralPlanet2Caption"><span> Coria Beta </span></div>
@@ -341,4 +341,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.138--->
+<!--Version 0.139--->
