--- a/hud.html
+++ b/hud.html
@@ -37,6 +37,7 @@
       #button1 { position:absolute; top:300px; left:100px; background:lightblue; border: 5px solid gray; }
       #button2 { position:absolute; top:300px; left:500px; background:yellow; border: 5px solid gray; }
       #button3 { position:absolute; top:300px; left:900px; background:thistle; border: 5px solid gray; }
+      #button4 { position:absolute; top:400px; left:900px; background:lightblue; border: 5px solid gray; }
       
     </style>
   
@@ -60,6 +61,7 @@
     <button id="button1" onclick="indebtMinerals()"> Click to spend Minerals </button>
     <button id="button2" onclick="indebtCredits()"> Click to spend Credits </button>
     <button id="button3" onclick="indebtAuthority()"> Click to spend Authority </button>
+    <button id="button4" onclick="gainMinerals()"> Click to gain Minerals </button>
 
 
 
@@ -81,7 +83,11 @@
         var newAuthorityNumber = HUDAuthorityNumber.innerText - 20;
         HUDAuthorityNumber.innerText = newAuthorityNumber;
       }
+      function gainMinerals() {
+        var newMineralNumber = HUDMineralNumber.innerText + 200;
+        HUDMineralNumber.innerText = newMineralNumber;
+      }
     </script>
   </body>
 </html>
-<!--Version 0.21--->
+<!--Version 0.22--->
