--- a/hud.html
+++ b/hud.html
@@ -37,7 +37,7 @@
       #button1 { position:absolute; top:300px; left:100px; background:lightblue; border: 5px solid gray; }
       #button2 { position:absolute; top:300px; left:500px; background:yellow; border: 5px solid gray; }
       #button3 { position:absolute; top:300px; left:900px; background:thistle; border: 5px solid gray; }
-      #button4 { position:absolute; top:400px; left:900px; background:lightblue; border: 5px solid gray; }
+      #button4 { position:absolute; top:400px; left:100px; background:lightblue; border: 5px solid gray; }
       
     </style>
   
@@ -72,22 +72,22 @@
       var HUDAuthorityNumber = document.getElementById("HUDAuthorityNumber");
       
       function indebtMinerals() {
-        var newMineralNumber = HUDMineralNumber.innerText - 20;
+        var newMineralNumber = Number(HUDMineralNumber.innerText) - 20;
         HUDMineralNumber.innerText = newMineralNumber;
       }
       function indebtCredits() {
-        var newCreditNumber = HUDCreditNumber.innerText - 20;
+        var newCreditNumber = Number(HUDCreditNumber.innerText) - 20;
         HUDCreditNumber.innerText = newCreditNumber;
       }
       function indebtAuthority() {
-        var newAuthorityNumber = HUDAuthorityNumber.innerText - 20;
+        var newAuthorityNumber = Number(HUDAuthorityNumber.innerText) - 20;
         HUDAuthorityNumber.innerText = newAuthorityNumber;
       }
       function gainMinerals() {
-        var newMineralNumber = HUDMineralNumber.innerText + 200;
+        var newMineralNumber = Number(HUDMineralNumber.innerText) + 200;
         HUDMineralNumber.innerText = newMineralNumber;
       }
     </script>
   </body>
 </html>
-<!--Version 0.22--->
+<!--Version 0.23--->
