--- a/hud.html
+++ b/hud.html
@@ -6,12 +6,12 @@
       body { background:#030a17; }
       .HUD { position:absolute; top:0px; left:0px; height:50px; width:100%; background:#7096cf; border:2px solid lightgray;
         display:inline-grid;
-        grid-template-columns: 20px 50px 70px 40px 50px 70px 40px 50px 70px auto;
+        grid-template-columns: 20px 50px 70px 40px 50px 70px 40px 50px 70px 40px 50px 70px auto;
         grid-auto-rows:10px 30px 10px;
         grid-template-areas:
-          "top     top         top           top     top        top          top     top           top             top   "
-          "margin1 mineralIcon mineralNumber margin2 creditIcon creditNumber margin3 authorityIcon authorityNumber margin4"
-          "bottom  bottom      bottom        bottom  bottom     bottom       bottom  bottom        bottom          bottom";
+          "top     top         top           top     top        top          top     top           top             top     top        top          top"
+          "margin1 mineralIcon mineralNumber margin2 creditIcon creditNumber margin3 authorityIcon authorityNumber margin4 supplyIcon supplyNumber margin5"
+          "bottom  bottom      bottom        bottom  bottom     bottom       bottom  bottom        bottom          bottom  bottom     bottom       bottom";
         gap:0px;
         transition:0.4s
       }
@@ -24,20 +24,25 @@
       .margin2 { grid-area:margin2; }
       .margin3 { grid-area:margin3; }
       .margin4 { grid-area:margin4; }
+      .margin5 { grid-area:margin4; }
       .mineralIcon { grid-area:mineralIcon; }
       .creditIcon { grid-area:creditIcon; }
       .authorityIcon { grid-area:authorityIcon; }
+      .supplyIcon { grid-area:supplyIcon; }
       .mineralNumber { grid-area:mineralNumber; padding:7px; }
       .creditNumber { grid-area:creditNumber; padding:7px; }
       .authorityNumber { grid-area:authorityNumber; padding:7px; }
+      .supplyNumber { grid-area:supplyNumber; padding:7px; }
       #HUDMineralIcon { image-rendering:pixelated; position:relative; height:25px; width:25px;}
       #HUDCreditIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       #HUDAuthorityIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
+      #HUDSupplyIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       
       #button1 { position:absolute; top:300px; left:100px; background:lightblue; border: 5px solid gray; }
       #button2 { position:absolute; top:300px; left:500px; background:yellow; border: 5px solid gray; }
       #button3 { position:absolute; top:300px; left:900px; background:thistle; border: 5px solid gray; }
       #button4 { position:absolute; top:400px; left:100px; background:lightblue; border: 5px solid gray; }
+      #button5 { position:absolute; top:700px; left:800px; background:tan; border: 5px solid gray; }
       
     </style>
   
@@ -62,6 +67,7 @@
     <button id="button2" onclick="indebtCredits()"> Click to spend Credits </button>
     <button id="button3" onclick="indebtAuthority()"> Click to spend Authority </button>
     <button id="button4" onclick="gainMinerals()"> Click to gain Minerals </button>
+    <button id="button5" onclick="starve()"> Click to starve </button>
 
 
 
@@ -87,7 +93,11 @@
         var newMineralNumber = Number(HUDMineralNumber.innerText) + 200;
         HUDMineralNumber.innerText = newMineralNumber;
       }
+      function starve() {
+        var newSupplyNumber = Number(HUDSupplyNumber.innerText) - 200;
+        HUDSupplyNumber.innerText = newSupplyNumber;
+      }
     </script>
   </body>
 </html>
-<!--Version 0.23--->
+<!--Version 0.24--->
