--- a/hud.html
+++ b/hud.html
@@ -60,6 +60,8 @@
       <div class="cell authorityIcon"><img id="HUDAuthorityIcon" src="authorityicon.png"></img></div>
       <div class="cell authorityNumber"><span id="HUDAuthorityNumber"> 50 </span></div>
       <div class="cell margin4"></div>
+      <div class="cell supplyIcon"><img id="HUDSupplyIcon" src="supplyicon.png"></img></div>
+      <div class="cell supplyNumber"><span id="HUDSupplyNumber"> 50 </span></div>
       <div class="cell bottom"></div>
     </div>
 
@@ -100,4 +102,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.24--->
+<!--Version 0.25--->
