--- a/planets.html
+++ b/planets.html
@@ -205,12 +205,12 @@
     <div class="mineralPlanetCaption" id="mineralPlanet2Caption"><span> Coria Beta </span></div>
     <div class="mineralPlanetCaption" id="mineralPlanet3Caption"><span> Coria Gamma </span></div>
 
-    <div class="planetCaption" id="desertPlanetCaption"><span> Calsron Alpha </span></div>
-    <div class="planetCaption" id="savannaPlanetCaption"><span> Calsron Beta </span></div>
-    <div class="planetCaption" id="arcticPlanetCaption"><span> Calsron Gamma </span></div>
-    <div class="planetCaption" id="tundraPlanetCaption"><span> Calsron Delta </span></div>
-    <div class="planetCaption" id="continentalPlanetCaption"><span> Calsron Epsilon </span></div>
-    <div class="planetCaption" id="oceanPlanetCaption"><span> Calsron Zeta </span></div>
+    <div class="planetCaption" id="desertCaption"><span> Calsron Alpha </span></div>
+    <div class="planetCaption" id="savannaCaption"><span> Calsron Beta </span></div>
+    <div class="planetCaption" id="arcticCaption"><span> Calsron Gamma </span></div>
+    <div class="planetCaption" id="tundraCaption"><span> Calsron Delta </span></div>
+    <div class="planetCaption" id="continentalCaption"><span> Calsron Epsilon </span></div>
+    <div class="planetCaption" id="oceanCaption"><span> Calsron Zeta </span></div>
 
 
     <script>
@@ -365,4 +365,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.140--->
+<!--Version 0.141--->
