--- a/planets.html
+++ b/planets.html
@@ -23,12 +23,12 @@
       #blueStar { top:300px; left:900px; width:15px; height:15px; }
       
       .planetCaption span { color:white; font-size:70%; }
-      #desertPlanetCaption { width:90px; position:absolute; top:190px; left:185px; display:none; }
-      #savannaPlanetCaption { width:90px; position:absolute; top:180px; left:515px; display:none; }
-      #arcticPlanetCaption { width:90px; position:absolute; top:360px; left:75px; display:none; }
-      #tundraPlanetCaption { width:90px; position:absolute; top:420px; left:495px; display:none; }
-      #continentalPlanetCaption { width:90px; position:absolute; top:490px; left:135px; display:none; }
-      #oceanPlanetCaption { width:90px; position:absolute; top:480px; left:535px; display:none; }
+      #desertCaption { width:90px; position:absolute; top:190px; left:185px; display:none; }
+      #savannaCaption { width:90px; position:absolute; top:180px; left:515px; display:none; }
+      #arcticCaption { width:90px; position:absolute; top:360px; left:75px; display:none; }
+      #tundraCaption { width:90px; position:absolute; top:420px; left:495px; display:none; }
+      #continentalCaption { width:90px; position:absolute; top:490px; left:135px; display:none; }
+      #oceanCaption { width:90px; position:absolute; top:480px; left:535px; display:none; }
       
       .mineralPlanetCaption span { color:white; font-size:70%; }
       #mineralPlanet1Caption { width:90px; position:absolute; top:355px; left:730px; display:none; }
@@ -365,4 +365,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.141--->
+<!--Version 0.142--->
