--- a/planets.html
+++ b/planets.html
@@ -253,7 +253,7 @@
         el.style.backgroundColor = "gray";
         el.style.padding = "0px";
         setTimeout(function(){
-          hideIcon()
+          hideIcon(el)
         },1100);        
       }
       function mineralSelect(el) {
