--- a/generator.html
+++ b/generator.html
@@ -24,7 +24,7 @@
   
   <body>
   
-    <img class="star" id="s1" src="redstar1.png"></img>  
+    <img class="star" id="s1" src="orangestar1.png"></img>  
     <div id="system1">
       <img class="planet" id="p1" src="savannaplanet1.png"></img>
       <img class="planet" id="p2" src="mineralplanet1.png"></img>
